argo/apps/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    homepage.name: "radarr"
  name: radarr
  namespace: media
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 7878
      protocol: TCP
  selector:
    app.kubernetes.io/name: radarr
